# MAX25-Stack

./: .gitignore  AGENT-INDEX.md  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  RELEASE-READINESS.md  TNC-MODEM-DEV.md  VERSION
.cursor/: hooks.json
.github/: pull_request_template.md
cmake/: MAX25Ax25.cmake  MAX25Platform.cmake
docs/: ARCHITECTURE.md  AX25-NATIVE-CODEC.md  AX25SRV-OPERATOR-GUIDE.md  BAYCOM-FREEZES.md  BAYCOM.md  CRDOP.md  DEVELOPMENT.md  DEVICES-LIST-FULL.md  FREEBSD-AX25.md  HARDWARE-ACCEPTANCE.md  HYBBX.md  LINUX-EDGE-SETUP.md  LINUX-HOST-SETUP.md  MASTER-GUIDE.md  MAX25-CLIENT.md  MAX25-OPERATOR-RUNBOOK.md  MAX25-TERMINAL.md  MERGE-REPORT.md  MODULAR-TCPIP-SERVER.md  NETDEV.md  PACKET-RADIO.md  PATHS.md  PLATFORMS.md  PLUGINS-DEVICE-MODEL.md  RASPBERRY-PI.md  README.md  TX-RX-TEST.md  V1.0.0-SCOPE.md  V2.0.0-SCOPE.md  WEBSOCKET.md
local/: README.md
plugins/: README.md  manifest.yaml
scripts/: build-all.sh  build-amiga-terminal.sh  build-ax25-deps.sh  build-freebsd.sh  build.sh  clean.sh  discover-plugins.sh  max25-ctl  (+10 more)
stacks/baycom-pr/tools/: CMakeLists.txt  Makefile  baycom_axports.py  baycom_doctor.py  baycom_ini_load.py  baycom_kiss_serial.c  baycom_kissbridge.c  baycom_preflight.py  baycom_probe.py  baycom_serial_status.py  baycom_sethdlc.c  baycom_test.c  baycom_validate_config.py  test_baycom_validate_usb.py
stacks/bcpr/: CMakeLists.txt  README.md
stacks/bcpr/include/bcpr/: bcpr_crc.h  bcpr_hdlc.h  bcpr_lock.h  bcpr_uart.h
stacks/bcpr/share/: bcpr.ini.example
stacks/bcpr/src/: bcpr_config.c  bcpr_engine.c  bcpr_hdlc.c  bcpr_lock.c  bcprd.c
stacks/bcpr/tests/: test_config_offline.c  test_hdlc_offline.c
stacks/bcpr/tools/: bcpr-ctl  bcpr-rxtx-smoke.sh
stacks/crdop/: .gitignore  CMakeLists.txt  LICENSE  Makefile  NOTICE.md  README.md  ROADMAP.md  VERSION
stacks/crdop/.github/workflows/: build.yml
stacks/crdop/cmake/: CRDOPCompiler.cmake  CRDOPPlatform.cmake  CRDOPTests.cmake  CRDOPVendorArdopcf.cmake
stacks/crdop/cmake/toolchains/: arm-linux-gnueabihf.cmake
stacks/crdop/docs/: ACOUSTIC-TEST-PROTOCOL.md  AUDIO-ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CONFIG.md  DEVELOPER.md  EXAMPLES.md  FEC-SPEC.md  G3RUH-DESIGN.md  HARDWARE-INTERFACE.md  HOST-PROTOCOL-SPEC.md  INDEX.md  LICENSE-USAGE.md  MAX25-USAGE.md  PROTOCOL.md  README.md  SOFTMODEM.md  SOUNDCARD-QUALIFICATION.md
stacks/crdop/include/crdop/: sound_proxy.h  version.h
stacks/crdop/lib/: __init__.py  acoustic_engine.py  afsk_demodulator.py  afsk_modulator.py  bell202_line_code.py  hdlc_codec.py  m25_host_protocol.py  sound_proxy.py  sound_proxy_oss.py  test_bell202_line_code.py
stacks/crdop/patches/ardopcf/: 0001-crdop-linux-gcc-branding.patch  0002-crdop-version-override.patch
stacks/crdop/scripts/: apply-vendor-patches.sh  build-crdop.sh  crdopc  import-ardopcf.sh  install-crdop.sh  refresh-vendor-ardopcf.sh  sync-upstream.sh  test-all.sh  test-smoke.sh  test-with-host.sh
stacks/crdop/share/: crdop-amateur.ini.example  crdop-dual.ini.example  crdop.freebsd.ini.example  crdop.ini.example
stacks/crdop/src/: crdop_version.c
stacks/crdop/tools/: audio-dummyd  audio-dummyd.py  max25-signal-sniffer  max25-signal-sniffer.py
stacks/max25-bcpr/: CMakeLists.txt  NOTICE.md  README.md
stacks/max25-bcpr/include/bcpr/: bcpr.h  bcpr_config.h  bcpr_engine.h  bcpr_ser12.h  bcpr_uart.h
stacks/max25-bcpr/src/: bcpr_config.c  bcpr_crc.c  bcpr_engine.c  bcpr_lock.c  bcpr_ser12.c  bcpr_uart.c  max25-bcprd.c
stacks/max25-bcpr/tests/: test_config_offline.c
stacks/max25-bcpr/tools/: NEBENBEI-MOVED.md  max25-bcpr-ctl  max25-bcpr-rxtx-smoke.sh  max25-bcpr-ultimate-diag.sh
stacks/terminal/: .gitignore  CMakeLists.txt  Makefile  README.md  max25_proto.c  max25_proto.h  max25_terminal.c  max25_ui.c  max25_ui.h  test-terminal.sh  test_apply_event.c  test_connect.py
stacks/terminal/amiga/: Makefile  max25_terminal_amiga.c
stacks/tncs/: CMakeLists.txt  DEVELOPMENT.md  Makefile  README.md  hybbx-ax25-beacon-once.py  hybbx-connect.sh  hybbx-dual.ini  hybbx-start-tnc2c.sh  hybbx-tnc2c.ini  load-serial-env.sh  minirc.hybbx  minirc.pktnc2  minirc.tnc2c  pktnc2-boot-wait.sh  pktnc2-serial.env  pktnc2-to-hybbx.sh  test_tnc_serial_recovery.py  tnc2c-autotest.py  tnc2c-autotest.sh  tnc2c-boot-wait.py  tnc2c-boot-wait.sh  tnc2c-chat.sh  tnc2c-check.sh  tnc2c-expect.exp  tnc2c-find.c  tnc2c-health.py  tnc2c-health.sh  tnc2c-host-reset.py  tnc2c-host-reset.sh  tnc2c-hybbx-beacon-once.sh  tnc2c-integration-test.py  tnc2c-integration-test.sh  tnc2c-listen.sh  tnc2c-probe.c  tnc2c-rf-tx-test.sh  tnc2c-send-test.sh  tnc2c-serial.env  tnc2c-tx-rx-test.py  tnc_serial_recovery.py
stacks/tncs/docs/: HYBBX-CONNECT.md  HYBBX-DUAL.md  HYBBX-TNC2C.md  PACKET-ON-AIR.md  TNC-INVENTORY.md  TNC-RECOVERY.md  TNC2C-OPERATIONS.md  TNC2C-REFERENCE.md
stacks/tncs/research/: README.md  sources.md
stacks/tncs/research/cables/: rs232-modem-cables.md
stacks/tncs/research/cb-ae6110/: overview.md  packet-settings.md  wiring-tnc2c.md
stacks/tncs/research/downloads/: Albrecht-AE6110-VOX-manual.txt  TNC2C.txt
stacks/tncs/research/hybbx/: hybbx-stabo-pk2.ini  production-ini-cb-ch24.ini
stacks/tncs/research/serial-tests/: automation-2026-07-10.md  health-2026-07-10-2236.md  health-2026-07-10-2340.md  health-2026-07-10-2340.txt  results.md  standalone-2026-07-10.md
stacks/tncs/research/tnc2c/: CONFIRMED.md  audio-pinout.md  board-from-photo.md  development-architecture.md  ebay-117173645481.md  ebay-227405716803.md  ebay-listing.md  forum-serial-host.md  hardware-inventory.md  jumpers-calibration.md  overview.md  serial-host.md
stacks/web/: CMakeLists.txt  README.md
stacks/web/proxy/: max25-ws-proxy.py  test_ws_proxy.py
stacks/web/scripts/: dev-router.php  dev-server.sh
stacks/web/share/: web-proxy.ini.example
stacks/web/share/reverse-proxy/: README.txt  apache2.conf.example  lighttpd.conf.example  nginx.conf.example
stacks/web/share/reverse-proxy/docroot/: README.txt
stacks/web/share/reverse-proxy/docroot/max25-websocket/: index.php  max25-terminal.js
(+200 files in other folders)
